# runtime_memcpy_test

./: README.md  run_all.sh
1_h2d_sync_full_buffer/: CMakeLists.txt  README.md  main.cpp
2_h2d_async_full_buffer/: CMakeLists.txt  README.md  main.cpp
3_d2h_sync_full_buffer/: CMakeLists.txt  README.md  main.cpp  run.sh
4_d2h_async_full_buffer/: CMakeLists.txt  README.md  main.cpp  run.sh
common/: full_buffer_kernels.cpp  full_buffer_kernels.h  full_buffer_test_utils.h
